--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Лабрадор - это лучшая собака на свете</h1>
     <hr>
     <figure>
-      <img src="images/CTtufonfxhU.jpg" alt="Изображение">
+      <img src="images/CTtufonfxhU.JPG" alt="Изображение">
       <figcaption>Вот тут вы видете черного лабрадора</figcaption>
     </figure>
     <p>Лабрадор обладает рядом преимуществ:</p>
